--- a/analysis.html
+++ b/analysis.html
@@ -39,6 +39,14 @@ h1 {
 </head>
 <body>
   <h1>Analysis of Bug in SWE-Synth</h1>
+  <p>
+We prompt an LLM to analyze each bug-fix pair in SWE-Synth, generating and
+clustering categories for four aspects: Type of Bug, Root Cause, Effect, and Bug Fix
+Pattern. After three rounds of hierarchical clustering and manual curation, we
+define 25 Effects, 18 Root Causes, 25 Fix Patterns, and 45 Bug Types. The LLM's
+classifications align closely with our manual labels (on a sample of 100), and
+results can be explored at <a href="https://swesynth.com/analysis.html">https://swesynth.com/analysis.html</a>.
+  </p>
   <div class="image-container">
     <div class="image-box">
       <img src="https://swesynth.com/img/Type_of_Bug.svg" alt="Type of Bug" />
