--- a/analysis.html
+++ b/analysis.html
@@ -44,10 +44,9 @@ h1 {
 We prompted the LLM <code>deepseek-v3-0324</code> to analyze each bug-fix pair
 in SWE-Synth, generating and clustering categories for four aspects: Type of
 Bug, Root Cause, Effect, and Bug Fix Pattern. After three rounds of hierarchical
-clustering and manual curation, we defined 25 categories for Effect of Bug, 18
-for Root Causes, 25 for Fix Patterns, and 45 for Bug Types. The LLM's
-classifications closely align with our manual labels (based on a sample of 100).
-The results can be explored at <a
+clustering and manual refinement, we defined 45 Bug Types, 18 Root Causes, 25 Effects,
+and 25 Fix Patterns. The LLM’s classifications closely matched manual labels
+(based on a 100-sample check). The results can be explored at <a
 href="https://swesynth.com/analysis.html">https://swesynth.com/analysis.html</a>.
 
   </p>
