--- a/analysis.html
+++ b/analysis.html
@@ -42,8 +42,8 @@ h1 {
   <p>
 
 We prompted the LLM <code>deepseek-v3-0324</code> to analyze each bug-fix pair
-in SWE-Synth, generating and clustering categories for four aspects: Type of
-Bug, Root Cause, Effect, and Bug Fix Pattern. After three rounds of hierarchical
+in SWE-Synth, clustering them into categories for Bug Type, Root Cause, Effect, and Fix Pattern.
+After three rounds of hierarchical
 clustering and manual refinement, we defined 45 Bug Types, 18 Root Causes, 25 Effects,
 and 25 Fix Patterns. The LLM’s classifications closely matched manual labels
 (based on a 100-sample check). The results can be explored at <a
