--- a/analysis.html
+++ b/analysis.html
@@ -53,7 +53,7 @@ p {
 
 We prompted the LLM <code>deepseek-v3-0324</code> to analyze each bug-fix pair
 in SWE-Synth, clustering them into categories for Bug Type, Root Cause, Effect, and Fix Pattern.
-After three rounds of hierarchical
+After three rounds of agglomerative hierarchical
 clustering and manual refinement, we defined 45 Bug Types, 18 Root Causes, 25 Effects,
 and 25 Fix Patterns. The LLM’s classifications closely matched manual labels
 (based on a 100-sample check). The results can be explored at <a
